--- a/MINI_PROJET QuizzSA/accueilAdmin.css
+++ b/MINI_PROJET QuizzSA/accueilAdmin.css
@@ -64,11 +64,11 @@ a button{
 }
 .menu .avatar{
     margin-top: -15px;
-    background-color: cadetblue;
+    background-color: #5e90af;
     width: 100%;
     height: 150px;
 }
-.menu .avatar h2{
+.menu .avatar .donnée{
     margin-left: 180px;
     padding-top: 20px;
 }
@@ -76,7 +76,7 @@ a button{
     text-align: center;
 }
 #output_image{
-    margin-top: -120px;
+    margin-top: -80px;
     float: left;
     width: 120px;
     height: 120px;
