--- a/MINI_PROJET QuizzSA/creer.css
+++ b/MINI_PROJET QuizzSA/creer.css
@@ -30,19 +30,24 @@ body{
     color:white;    
 }
 .p1 .smallheader{
+    padding-top: 30px;
     margin-left: 500px;
     font-size: 18px;
     font-weight: bold;
 }
+.p1 .smallheader span{
+    color: white;
+    margin-left: 265px;
+}
 a button{
-    margin-top: -25px;
+    margin-top: -50px;
     float: right;
     width: 150px ;
     height: 50px;
-    background-color: green;
+    background-color: greenyellow;
 }
 .fieldset{
-    margin-top: -10px;
+    margin-top: -5px;
     margin-left: 30px;
     width: 95%;
     height:550px;
@@ -53,15 +58,15 @@ a button{
     margin-left: 20px;
     float: left;
     width: 30%;
-    height: 350px;
+    height: 330px;
     background-color: ghostwhite;
     border-radius: 5px;
 }
 .menu .avatar{
-    margin-left: 0px;
+    margin-top: -15px;
+    background-color: #5e90af;
     width: 100%;
     height: 150px;
-    background-color:#5e90af;
 }
 .menu .avatar .donnée{
     margin-left: 180px;
@@ -110,40 +115,11 @@ color: gray;
     float: right;
 }
 .fieldset1{
-    margin-top: -450px;
+    margin-top: 10px;
     float: right;
-    margin-right: 100px;
+    margin-right: 150px;
     width: 50%;
     height:450px;
-    background-color: white;
+    color: gray;
+    border: white solid;
 }
-.p3{
-    margin-left: 30px;
-    margin-top: -10px;
-}
-.p3 h4{
-    margin-top: 2px;
-}
-.p3 input{
-    margin-top: -50px;
-    height:20px;
-    width: 40%;
-    margin-right: 5%;
-    background-color: ghostwhite;
-    border-radius: 1px;
-}
-.p2 {
-    margin-top: -30px;
-    margin-left: 20px;
-}
-.p2 h4{
-    margin-top: -20px;
-}
-.valider{
-    height:40px;
-    width: 30%;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: -15px;
-    background-color:rgb(128, 208, 208);
-} 
