--- a/MINI_PROJET QuizzSA/creer.css
+++ b/MINI_PROJET QuizzSA/creer.css
@@ -39,7 +39,7 @@ body{
     color: white;
     margin-left: 265px;
 }
-a button{
+.deconnexion{
     margin-top: -50px;
     float: right;
     width: 150px ;
