--- a/QuizzSA_DB/style/Style.css
+++ b/QuizzSA_DB/style/Style.css
@@ -5,28 +5,46 @@ body{
 }
 .contenu{
     position: absolute;
-    margin-top: 20%;
-    margin-left: 35%;
+    margin-top: 8%;
+    margin-left: 20%;
+    background-color: gray;
+    height: 60%;
+    width: 39%;
 }
-.contenu .text h1{
-    margin-top: -50px;
+.contenu h1{
+    margin-top: 40px;
+    text-align: center;
+}
+.login_form{
+    margin-left: 25%;
+    margin-top: -12%;
 }
 .logo{
-    position: absolute;
+   position: absolute;
     width: 150px;
     height: 250px;
-    left: -180px;
-    top: -50px;
+    margin-top: -2%;
     background-repeat:no-repeat;
     background: url(Images/logo-QuizzSA.png);
     background-size:cover;
+}
+.logoJr{
+    
+   
+    background-repeat:no-repeat;
+    background: url(Images/logo-QuizzSA.png);
+    background-size:cover;
+}
+.login{
+    margin-top: 35%;
+    margin-right: 5%;
 }
 .p2 input{
     height:40px;
     width: 135px;
     margin-left: 5%;
     margin-right: 5%;
-    background-color:gray;
+    background: #56CCF2;
 }
 .p1 .input1 {
     height:40px;
@@ -47,7 +65,35 @@ body{
     background: white url(./Images/Icônes/ic-password.png) right no-repeat;
 }
 .p2 a{
-    float: right;
     color: black;
     text-decoration: none;
+    margin-right: 50px;
+}
+.header{
+    background-color: rgba(155, 81, 224, 0.9);
+    text-align: center;
+    width:97% ;
+    float: right;
+    margin-top: -3%;
+}
+.logo_admin{
+    background-image: url(style/Images/logo-QuizzSA.png);
+}
+.affiche{
+    background-color: white;
+}
+.page{
+    margin-top:3%;
+}
+#output{
+    margin-right: 50px;
+    margin-top: -400px;
+    float: right;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+}
+
+.ava{
+    margin-left: 30px;
 }
